# modelling-networks

./: .gitignore  README.md  configure-poetry.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
icsspy/: __init__.py  networks.py  paths.py  style.py
icsspy/data/enron/: enron_graph.gt
icsspy/mplstyles/: mcelreath.mplstyle
tutorials/: 1-analysis-political-blogs.qmd  2-enron.qmd
